ajuste na semântica html

--- a/testeGIT/index.html
+++ b/testeGIT/index.html
@@ -6,11 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
+    <header>
 
-    <main></main>
+    </header>
 
-    <footer></footer>
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
     
 </body>
 </html>
