Estudo de centralização de caixa vertical

--- a/html-css/exercícios/ex001/fundo04.html
+++ b/html-css/exercícios/ex001/fundo04.html
@@ -6,10 +6,13 @@
     <title>Teste imagem de fundo</title>
     <style>
         body {
+            height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
         }
         main {
             background-color: white;
@@ -25,7 +28,7 @@
 <body>
     <main>
         <h1>Teste de imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quas est nulla. Aperiam neque delectus fugiat, laudantium tempore natus soluta accusantium beatae animi eos distinctio voluptates id repellendus est. Quos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, quaerat! Assumenda illo cupiditate est accusamus reiciendis rerum. Harum nihil, iste expedita laboriosam enim sed error nesciunt quam? Dolore, omnis inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis molestias harum, ipsum voluptatibus eveniet officiis possimus cum sed debitis, facilis similique. Est, magnam numquam vero perferendis dolores quod sit dignissimos?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur quas est nulla. Aperiam neque delectus fugiat, laudantium tempore natus soluta accusantium beatae animi eos distinctio voluptates id repellendus est. Quos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, quaerat! Assumenda illo cupiditate est accusamus reiciendis rerum. Harum nihil, iste expedita laboriosam enim sed Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi facilis nesciunt commodi excepturi at, velit, consectetur adipisci aspernatur veritatis iste temporibus, ab quod ex maxime fugit sint tenetur accusamus! Nobis? error nesciunt quam? Dolore, omnis inventore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis molestias harum, ipsum voluptatibus eveniet officiis possimus cum sed debitis, facilis similique. Est, magnam numquam vero perferendis dolores quod sit dignissimos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem soluta laborum vel optio incidunt mollitia quibusdam ratione, repudiandae adipisci debitis hic impedit illo unde nobis et, asperiores odio maiores dolore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt tenetur, quos rem quisquam quibusdam consequatur temporibus tempore sed sit nemo laudantium dolorum debitis ad perspiciatis pariatur, voluptatum voluptatem, nulla expedita. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quibusdam dolorum similique modi sit ut ad sed optio earum, eius minima. Ducimus facere vero qui ipsam corporis mollitia, possimus culpa. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi non dolorem recusandae iusto cupiditate odit nulla, laudantium ducimus dolore laborum dignissimos? Quae unde officiis excepturi ducimus autem neque maxime voluptate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam ducimus dolore eveniet atque at, voluptatibus nam beatae expedita accusantium sapiente. Nostrum possimus deserunt, culpa corrupti accusamus nesciunt dignissimos voluptatum! Totam. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit nulla cupiditate architecto necessitatibus adipisci consequuntur repudiandae itaque expedita velit iste maiores a tempora voluptatibus dolorem, esse dolor saepe ipsa veritatis!</p>
     </main>
 </body>
 </html>
