--- a/html-css/exercícios/ex003/tabela02.html
+++ b/html-css/exercícios/ex003/tabela02.html
@@ -22,7 +22,7 @@
             background-color: gray;
         }
         .num {
-            background-color: rgba(255, 255, 0, 0.712);
+            background-color: rgb(255, 255, 0);
             text-align: right;
         }
 
