aplicando efeito zebra em tabelas

--- a/html-css/exercícios/ex003/tabela02.html
+++ b/html-css/exercícios/ex003/tabela02.html
@@ -21,8 +21,14 @@
         thead, tfoot {
             background-color: gray;
         }
+        tbody > tr:nth-child(odd) {
+            background-color: lightgray;
+        }
+
+        tbody > tr:nth-child(even) {
+            background-color: rgb(104, 103, 103);
+        }
         .num {
-            background-color: rgb(255, 255, 0);
             text-align: right;
         }
 
